--- a/taste.html
+++ b/taste.html
@@ -14,7 +14,7 @@
 			</div>
 
 			<div id="footer">
-				<a href="favorite.html" class="col"><i class="far fa-star"></i><span>Favorite</span></a>
+				<a href="index.html" class="col"><i class="far fa-star"></i><span>Favorite</span></a>
 				<a href="apeluri.html" class="col"><i class="far fa-clock"></i><span>Apeluri</span></a>
 				<a href="contacte.html" class="col"><i class="far fa-user-circle"></i><span>Contacte</span></a>
 				<a href="taste.html" class="col active"><i class="fas fa-th"></i><span>Taste</span></a>
